Started on design for the sign in page

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,4 +1,7 @@
 @import './_foundation-settings';
+@import './_app-settings';
 @import './normalize';
 @import './foundation';
-@import './text';
+@import './fonts';
+@import './main';
+@import './goodreads';
