--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,10 +2,19 @@
     font-size: 16px;
 }
 
-body {
+body {    
     > footer {
         margin-top: 1rem;
     }
+}
+
+.card {
+    background-color: $white;
+}
+
+.login {
+    margin-top: 2rem;
+    padding: 2rem;
 }
 
 @mixin sunset() {
